5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1728_2508.log
== TEST (2019-05-15 00:55:03) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = ((-1)**t)/(2*t+1)
	soma = soma + tg
	
	print(soma)
-- OUTPUT:
1.0
2.0
3.0
4.0
5.0
6.0
7.0
8.0
9.0
10.0
11.0
12.0
13.0
14.0
15.0
16.0
17.0
18.0
19.0
20.0
21.0
22.0
23.0
24.0
25.0
26.0
27.0
28.0
29.0
30.0
31.0
32.0
33.0
34.0
35.0
36.0
37.0
38.0
39.0
40.0
41.0
42.0
43.0
44.0
45.0
46.0
47.0
48.0
49.0
50.0
51.0
52.0
53.0
54.0
55.0
56.0
57.0
58.0
59.0
60.0
61.0
62.0
63.0
64.0
65.0
66.0
67.0
68.0
69.0
70.0
71.0
72.0
73.0
74.0
75.0
76.0
77.0
78.0
79.0
80.0
81.0
82.0
83.0
84.0
85.0
86.0
87.0
88.0
89.0
90.0
91.0
92.0
93.0
94.0
95.0
96.0
97.0
98.0
99.0
100.0
101.0
102.0
103.0
104.0
105.0
106.0
107.0
108.0
109.0
110.0
111.0
112.0
113.0
114.0
115.0
116.0
117.0
118.0
119.0
120.0
121.0
122.0
123.0
124.0
125.0
126.0
127.0
128.0
129.0
130.0
131.0
132.0
133.0
134.0
135.0
136.0
137.0
138.0
139.0
140.0
141.0
142.0
143.0
144.0
145.0
146.0
147.0
148.0
149.0
150.0
151.0
152.0
153.0
154.0
155.0
156.0
157.0
158.0
159.0
160.0
161.0
162.0
163.0
164.0
165.0
166.0
167.0
168.0
169.0
170.0
171.0
172.0
173.0
174.0
175.0
176.0
177.0
178.0
179.0
180.0
181.0
182.0
183.0
184.0
185.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:56:19) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = ((-1)**t)/(2*t+1)
	soma = soma + 4tg
	
	print(soma)
-- ERROR:
File "XXXX", line 8
    soma = soma + 4tg
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:06:23) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = ((-1)**t)/(2*t+1)
	soma = soma + tg
	t = t+1
	print(soma)
-- OUTPUT:
1.0
0.6666666666666667
0.8666666666666667
0.7238095238095239
0.8349206349206351
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:06:49) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = ((-1)**t)/(2*t+1)
	soma = soma + 4tg
	t = t+1
	print(soma)
-- ERROR:
File "XXXX", line 8
    soma = soma + 4tg
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:06:54) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = ((-1)**t)/(2*t+1)
	soma = soma + 4*tg
	t = t+1
	print(soma)
-- OUTPUT:
4.0
2.666666666666667
3.466666666666667
2.8952380952380956
3.3396825396825403
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:07:02) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = ((-1)**t)/(2*t+1)
	soma = soma + 4*tg
	t = t+1
	print(soma)
-- OUTPUT:
4.0
2.666666666666667
3.466666666666667
2.8952380952380956
3.3396825396825403
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:07:25) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = (4*(-1)**t)/(2*t+1)
	soma = soma + tg
	t = t+1
	print(soma)
-- OUTPUT:
4.0
2.666666666666667
3.466666666666667
2.8952380952380956
3.3396825396825403
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:12:23) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = (4*(-1)**t)/(n*(n+1)*(n+3))
	soma = soma + tg
	t = t+1
	print(soma)
-- OUTPUT:
0.016666666666666666
0.0
0.016666666666666666
0.0
0.016666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:14:42) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = (4*(-1)**t)/((n+1)*(n+2)*(n+3))
	soma = soma + tg
	t = t+1
	print(soma)
-- OUTPUT:
0.011904761904761904
0.0
0.011904761904761904
0.0
0.011904761904761904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:16:58) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
soma = 0

while (t < n):
	tg = 3 + (4*(-1)**t)/((2n+1)*(n+2)*(n+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- ERROR:
File "XXXX", line 7
    tg = 3 + (4*(-1)**t)/((2n+1)*(n+2)*(n+3))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:17:15) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = 3 + (4*(-1)**t)/((2t+1)*(t+2)*(t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- ERROR:
File "XXXX", line 7
    tg = 3 + (4*(-1)**t)/((2t+1)*(t+2)*(t+3))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:17:25) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = 3 + (4*(-1)**t)/((2*t+1)*(t+2)*(t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
3.6666666666666665 3.6666666666666665
2.888888888888889 6.555555555555555
3.04 9.595555555555556
2.980952380952381 12.576507936507937
3.0105820105820107 15.587089947089948
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:18:33) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = 3 + (4*(-1)**t)/((2*t+1)*(2t+2)*(2t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- ERROR:
File "XXXX", line 7
    tg = 3 + (4*(-1)**t)/((2*t+1)*(2t+2)*(2t+3))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:18:41) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = 3 + (4*(-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
3.6666666666666665 3.6666666666666665
2.933333333333333 6.6
3.019047619047619 9.619047619047619
2.992063492063492 12.61111111111111
3.004040404040404 15.615151515151515
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:18:46) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = 3 + (4*(-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
3.6666666666666665 3.6666666666666665
2.933333333333333 6.6
3.019047619047619 9.619047619047619
2.992063492063492 12.61111111111111
3.004040404040404 15.615151515151515
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:20:10) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = 3 + (4*(-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
3.6666666666666665 3.6666666666666665
2.933333333333333 6.6
3.019047619047619 9.619047619047619
2.992063492063492 12.61111111111111
3.004040404040404 15.615151515151515
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:20:34) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = 3 + ((-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
3.1666666666666665 3.1666666666666665
2.9833333333333334 6.15
3.0047619047619047 9.154761904761905
2.998015873015873 12.152777777777779
3.001010101010101 15.15378787878788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:21:04) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = (4 + (-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
0.8333333333333334 0.8333333333333334
0.05 0.8833333333333334
0.023809523809523808 0.9071428571428573
0.005952380952380952 0.9130952380952382
0.005050505050505051 0.9181457431457433
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:21:12) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 0

while (t < n):
	tg = (4*(-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
0.6666666666666666 0.6666666666666666
-0.06666666666666667 0.6
0.01904761904761905 0.6190476190476191
-0.007936507936507936 0.6111111111111112
0.00404040404040404 0.6151515151515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:21:45) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
soma = 3

while (t < n):
	tg = (4*(-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
-0.06666666666666667 2.933333333333333
0.01904761904761905 2.952380952380952
-0.007936507936507936 2.944444444444444
0.00404040404040404 2.9484848484848483
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:21:53) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
soma = 3

while (t < n):
	tg = (4*(-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
-0.06666666666666667 2.933333333333333
0.01904761904761905 2.952380952380952
-0.007936507936507936 2.944444444444444
0.00404040404040404 2.9484848484848483
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:21:58) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
soma = 3

while (t <+ n):
	tg = (4*(-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
-0.06666666666666667 2.933333333333333
0.01904761904761905 2.952380952380952
-0.007936507936507936 2.944444444444444
0.00404040404040404 2.9484848484848483
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:22:06) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
soma = 3

while (t <= n):
	tg = (4*(-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
-0.06666666666666667 2.933333333333333
0.01904761904761905 2.952380952380952
-0.007936507936507936 2.944444444444444
0.00404040404040404 2.9484848484848483
-0.002331002331002331 2.946153846153846
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:24:02) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 3

while (t < n):
	tg = (4*(-1)**t)/((2*t+1)*(2*t+2)*(2*t+3))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
0.6666666666666666 3.6666666666666665
-0.06666666666666667 3.5999999999999996
0.01904761904761905 3.6190476190476186
-0.007936507936507936 3.6111111111111107
0.00404040404040404 3.615151515151515
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:24:51) 
-- CODE:
n = int(input("Numero de termos: "))

t = 0
soma = 3

while (t < n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:25:11) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
soma = 3

while (t <= n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
-0.16666666666666666 2.8333333333333335
0.03333333333333333 2.8666666666666667
-0.011904761904761904 2.854761904761905
0.005555555555555556 2.8603174603174604
-0.0030303030303030303 2.8572871572871574
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:25:32) 
-- CODE:
n = int(input("Numero de termos: "))

t = 2
soma = 3

while (t <= n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
0.03333333333333333 3.033333333333333
-0.011904761904761904 3.0214285714285714
0.005555555555555556 3.026984126984127
-0.0030303030303030303 3.023953823953824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:25:38) 
-- CODE:
n = int(input("Numero de termos: "))

t = 2
soma = 3

while (t <= n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	soma = soma + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
0.03333333333333333 3.033333333333333
-0.011904761904761904 3.0214285714285714
0.005555555555555556 3.026984126984127
-0.0030303030303030303 3.023953823953824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:26:16) 
-- CODE:
n = int(input("Numero de termos: "))

t = 2
soma = 3

while (t <= n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	termo = 3 + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
0.03333333333333333 3
-0.011904761904761904 3
0.005555555555555556 3
-0.0030303030303030303 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:26:21) 
-- CODE:
n = int(input("Numero de termos: "))

t = 2
soma = 3

while (t <= n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	termo = 3 + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
0.03333333333333333 3
-0.011904761904761904 3
0.005555555555555556 3
-0.0030303030303030303 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:26:27) 
-- CODE:
n = int(input("Numero de termos: "))

t = 2
soma = 3

while (t <= n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	termo = 3 + tg
	t = t+1
	print(tg, soma)
-- OUTPUT:
0.03333333333333333 3
-0.011904761904761904 3
0.005555555555555556 3
-0.0030303030303030303 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:27:16) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t <= n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
	print(tg, soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(tg, soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:27:30) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t <= n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
	print(termo)
-- OUTPUT:
2.8333333333333335
2.8666666666666667
2.854761904761905
2.8603174603174604
2.8572871572871574
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:28:18) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(termo)
-- OUTPUT:
2.8603174603174604
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:28:22) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(termo)
-- OUTPUT:
2.8603174603174604
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:29:06) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**t)/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(termo)
-- OUTPUT:
2.8603174603174604
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:32:42) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**(t+1)/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(termo)
-- ERROR:
File "XXXX", line 8
    termo = termo + tg
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:32:59) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**(t+1))/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(termo)
-- OUTPUT:
3.1396825396825396
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:33:11) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**(t+1))/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(termo)
-- OUTPUT:
3.1396825396825396
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:33:17) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**(t+1))/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(termo)
-- OUTPUT:
3.1396825396825396
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:33:22) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**(t+1))/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(termo)
-- EXECUTION TIME:
0.151285
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.1396825396825396
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.1416160719181865
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563302845726
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 01:33:35) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**(t+1))/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(termo)
-- OUTPUT:
3.1396825396825396
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 01:33:53) 
-- CODE:
n = int(input("Numero de termos: "))

t = 1
termo = 3

while (t < n):
	tg = (4*(-1)**(t+1))/((2*t)*(2*t+1)*(2*t+2))
	termo = termo + tg
	t = t+1
print(round(termo,8))
-- EXECUTION TIME:
0.149977
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
